fix body overflow

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,9 +1,6 @@
 @import 'foundation/settings';
 @import 'foundation';
 
-body {
-    overflow: hidden;
-}
 
 // mixin to address iOS 7 issue with vh, vmin
 //
